--- a/public/index.html
+++ b/public/index.html
@@ -1293,7 +1293,7 @@
     id="masthead"
     class="site-header theme-header-6-alt header-get-sticky"
   >
-    <div class="eb-header-top-bar eb-top-bar-style-2">
+    <!-- <div class="eb-header-top-bar eb-top-bar-style-2">
       <div class="edublink-container">
         <div class="edublink-header-top-content">
           <div class="header-top-left">
@@ -1333,7 +1333,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="edublink-header-area edublink-navbar edublink-navbar-expand-lg">
       <div class="edublink-container">
         <div class="eb-header-navbar edublink-align-items-center">
